# caju

./: .eslintrc.json  .gitignore  .prettierignore  Makefile  README.md  _headers  cloud_build.sh  index.html  package-lock.json  package.json  vite.config.js
assets/audio/: README.md
assets/models/: caju_low.glb  contact.glb  info_low.glb
src/: main.js
src/components/: ArchText.js  Caju.js  Component.js  CurvedText.js  FloatingPlane.js  Info.js  OrbitingObject.js  ShaderMaterial.js
src/scenes/: MainScene.js
src/shaders/glass/: fragment.glsl  glassUniforms.js  vertex.glsl  vertex.js
src/shaders/postprocessing/: CRTShader.js  crt.frag.glsl
src/shaders/sss/: fragment.glsl  fragment.js  sssUniforms.js  vertex.glsl
src/shaders/utils/: shaderInjection.js
src/utils/: AssetLoader.js  Benchmark.js  Camera.js  Constants.js  EventBinder.js  HybridRaycaster.js  InteractionManager.js  PerformanceManager.js  Renderer.js  RipplePool.js
src/wasm/: WasmBridge.js
styles/: main.css
wasm/: Cargo.toml
wasm/.cargo/: config.toml
wasm/src/: animation.rs  audio_dsp.rs  geometry.rs  lib.rs  matrix_ops.rs  raycast.rs  ripple_physics.rs  texture_gen.rs
