[package]
name = "caju-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
glam = { version = "0.25", features = ["bytemuck"] }
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Performance",
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"